[gd_scene load_steps=2 format=2]

[ext_resource path="res://circle_spawner.gd" type="Script" id=1]

[node name="circle_spawner" type="Node2D"]
script = ExtResource( 1 )
numOfSpawns = 5

[node name="fire_rate" type="Timer" parent="."]

[node name="rotate_timer" type="Timer" parent="."]

[connection signal="timeout" from="fire_rate" to="." method="_on_fire_rate_timeout"]
[connection signal="timeout" from="rotate_timer" to="." method="_on_rotate_timer_timeout"]
